workflow is basically working
Some formating issues and configuration can be simplified further.