@@ -44,89 +44,386 @@
 	</issueManagement>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.framework.version>3.2.6.RELEASE</spring.framework.version>
-		<vaadin.version>6.8.8</vaadin.version>
-		<gwt.version>2.6.1</gwt.version>
-		<madura.bundle.version>4.1.0</madura.bundle.version>
-		<madura.vaadinsupport.version>2.6.0</madura.vaadinsupport.version>
-		<madura.rules.version>2.2.6</madura.rules.version>
-		<madura.objects.version>2.2.5</madura.objects.version>
-		<slf4j.version>1.7.5</slf4j.version>
-		<logback.version>1.0.1</logback.version>
-		<jaxb2_commons.version>0.6.2</jaxb2_commons.version>
-		<jaxb22.version>2.2.4-1</jaxb22.version>
-		<hibernate-version>4.2.19.Final</hibernate-version>
-		<hyperjaxb-version>0.5.6</hyperjaxb-version>
+		<project.source.version>1.7</project.source.version>
+		<project.target.version>1.7</project.target.version>
+		<project.scm.id>github</project.scm.id>
 		<pdf>target/${project.artifactId}-${project.version}.pdf</pdf>
+		<spring.framework.version>4.2.3.RELEASE</spring.framework.version>
+		<spring.framework.integration.version>4.2.4.RELEASE</spring.framework.integration.version>
 		<spring.framework.data.version>1.4.2.RELEASE</spring.framework.data.version>
-		<spring.framework.security.version>3.2.0.RELEASE</spring.framework.security.version>
-		<spring.framework.integration.version>3.0.0.RELEASE</spring.framework.integration.version>
+		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
+		<hibernate-version>4.3.10.Final</hibernate-version>
+		<hyperjaxb3-ejb-runtime.version>0.5.6</hyperjaxb3-ejb-runtime.version>
+		<hyperjaxb-version>0.5.6</hyperjaxb-version>
+		<jaxb2_commons-version>0.5.6</jaxb2_commons-version>
+		<madura.vaadin.version>3.0.0-SNAPSHOT</madura.vaadin.version>
+		<madura.rules.version>3.0.0-SNAPSHOT</madura.rules.version>
+		<madura.rules.maven.plugin.version>1.2.3-SNAPSHOT</madura.rules.maven.plugin.version>
+		<madura.objects.version>3.0.0-SNAPSHOT</madura.objects.version>
+		<madura.bundle.version>4.2.0-SNAPSHOT</madura.bundle.version>
+   		<timestamp>${maven.build.timestamp}</timestamp>
+   		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
+		<jaxb22.version>2.2.4-1</jaxb22.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>vaadin-addons</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
+		<repository>
+			<id>vaadin-snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<modules>
 		<module>madura-workflow</module>
  		<module>madura-workflow-vaadin</module>
-		<module>order-workflow</module>
-		<module>simple-workflow</module>
  		<module>madura-workflow-ui</module>
+		<module>simple-workflow</module>
+		<module>order-workflow</module>
  		<module>nmc-workflow</module>
+ 		<module>madura-test-webservice</module>
 	</modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-login</artifactId>
+				<version>${madura.vaadin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-vaadin</artifactId>
+	            <version>${madura.vaadin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-vaadin-tableeditor</artifactId>
+	            <version>${madura.vaadin.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-objects</artifactId>
+				<version>${madura.objects.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-rules</artifactId>
+				<version>${madura.objects.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.logback-extensions</groupId>
+			    <artifactId>logback-ext-spring</artifactId>
+			    <version>0.1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.12</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>1.7.12</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+				<version>1.7.12</version>
+			</dependency>
+
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.0.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.framework.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-web</artifactId>
+				<version>${spring.framework.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-context-support</artifactId>
+			    <version>${spring.framework.version}</version>
+			</dependency>
+			<dependency>
+				<artifactId>spring-aop</artifactId>
+				<groupId>org.springframework</groupId>
+				<version>${spring.framework.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-test</artifactId>
+			    <version>${spring.framework.version}</version>
+			    <scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>nz.co.senanque</groupId>
+				<artifactId>madura-resource-loader</artifactId>
+				<version>1.1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jvnet.hyperjaxb3</groupId>
+				<artifactId>hyperjaxb3-ejb-runtime</artifactId>
+				<version>${hyperjaxb3-ejb-runtime.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.jvnet.hyperjaxb3</groupId>
+						<artifactId>hyperjaxb3-ejb-roundtrip</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.jvnet.hyperjaxb3</groupId>
+				<artifactId>hyperjaxb3-ejb-plugin</artifactId>
+				<version>${hyperjaxb3-ejb-runtime.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.jvnet.hyperjaxb3</groupId>
+						<artifactId>hyperjaxb3-ejb-roundtrip</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.springframework</groupId>
+						<artifactId>spring</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.kuali.maven.plugins</groupId>
-				<artifactId>properties-maven-plugin</artifactId>
-				<version>1.1.9</version>
-				<executions>
-					<execution>
-						<phase>initialize</phase>
-						<goals>
-							<goal>read-project-properties</goal>
-						</goals>
-						<configuration>
-							<locations>
-								<location>${HOME}/madura.properties</location>
-							</locations>
-							<quiet>true</quiet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+	    <pluginManagement>
+	    	<plugins>
 				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.4</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty.plugin.version}</version>
 					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.kuali.maven.plugins
-										</groupId>
-										<artifactId>
-											properties-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.1.9,)
-										</versionRange>
-										<goals>
-											<goal>
-												read-project-properties
-											</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
+						<jvmArgs>-XX:PermSize=128M -XX:MaxPermSize=256M</jvmArgs>
+					    <scanIntervalSeconds>2</scanIntervalSeconds>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.kuali.maven.plugins</groupId>
+					<artifactId>properties-maven-plugin</artifactId>
+					<version>1.1.9</version>
+					<executions>
+						<execution>
+							<phase>initialize</phase>
+							<goals>
+								<goal>read-project-properties</goal>
+							</goals>
+							<configuration>
+								<locations>
+									<location>${HOME}/madura.properties</location>
+								</locations>
+								<quiet>true</quiet>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-gpg-plugin</artifactId>
+					<version>1.4</version>
+					<executions>
+						<execution>
+							<id>sign-artifacts</id>
+							<phase>verify</phase>
+							<goals>
+								<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			      <plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-jar-plugin</artifactId>
+			        <version>2.4</version>
+			        <configuration>
+			          <archive>
+			            <manifest>
+			              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+			            </manifest>
+			            <manifestEntries>
+			              <implementation-build>${timestamp}</implementation-build>
+			            </manifestEntries>
+			          </archive>
+			        </configuration>
+			      </plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.3</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+						<!-- Exclude some unnecessary files generated by the GWT compiler. -->
+						<packagingExcludes>WEB-INF/classes/VAADIN/gwt-unitCache/**,
+							WEB-INF/classes/VAADIN/widgetsets/WEB-INF/**</packagingExcludes>
+			          <archive>
+			            <manifest>
+			              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+			            </manifest>
+			            <manifestEntries>
+			              <implementation-build>${timestamp}</implementation-build>
+			            </manifestEntries>
+			          </archive>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.0</version>
+					<configuration>
+						<encoding>${project.encoding}</encoding>
+						<source>${project.source.version}</source>
+						<target>${project.target.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.vaadin</groupId>
+					<artifactId>vaadin-maven-plugin</artifactId>
+					<version>${vaadin.plugin.version}</version>
+	                <configuration>
+	                    <webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
+	                    <hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp>
+	                    <noServer>true</noServer>
+	                    <!-- Remove draftCompile when project is ready -->
+	                    <draftCompile>false</draftCompile>
+	                    <compileReport>false</compileReport>
+	                    <style>OBF</style>
+	                    <persistentunitcachedir>${project.build.directory}</persistentunitcachedir>
+	                    <deploy>${project.build.directory}/gwt-deploy</deploy>
+	                    <runTarget>http://localhost:8080/</runTarget>
+	                    <extraJvmArgs>-Xmx1024M -Xss4024k -XX:MaxPermSize=128m</extraJvmArgs>
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <goals>
+								<goal>update-theme</goal>
+	                            <goal>resources</goal><!-- ?? -->
+	                            <goal>update-widgetset</goal>
+	                            <goal>compile</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+				</plugin>
+	            <plugin>
+	                <groupId>org.mortbay.jetty</groupId>
+	                <artifactId>jetty-maven-plugin</artifactId>
+	                <version>${jetty.plugin.version}</version>
+	            </plugin>
+	    		<plugin>
+					<groupId>nz.co.senanque</groupId>
+					<artifactId>madura-rules-maven-plugin</artifactId>
+					<version>${madura.objects.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>nz.co.senanque</groupId>
+					<artifactId>madura-objects-maven-plugin</artifactId>
+					<version>${madura.objects.version}</version>
+				</plugin>
+			      <plugin>
+			        <groupId>org.eclipse.m2e</groupId>
+			        <artifactId>lifecycle-mapping</artifactId>
+			        <version>1.0.0</version>
+			        <configuration>
+			          <lifecycleMappingMetadata>
+			            <pluginExecutions>
+			              <pluginExecution>
+			                <pluginExecutionFilter>
+			                  <groupId>org.apache.maven.plugins</groupId>
+			                  <artifactId>maven-enforcer-plugin</artifactId>
+			                  <versionRange>[1.0.0,)</versionRange>
+			                  <goals>
+			                    <goal>enforce</goal>
+			                  </goals>
+			                </pluginExecutionFilter>
+			                <action>
+			                  <ignore />
+			                </action>
+			              </pluginExecution>
+			              <pluginExecution>
+			              	<pluginExecutionFilter>
+			              		<groupId>org.codehaus.mojo</groupId>
+			              		<artifactId>
+			              			build-helper-maven-plugin
+			              		</artifactId>
+			              		<versionRange>[1.5,)</versionRange>
+			              		<goals>
+			              			<goal>add-test-source</goal>
+			              		</goals>
+			              	</pluginExecutionFilter>
+			              	<action>
+			              		<ignore></ignore>
+			              	</action>
+			              </pluginExecution>
+			            </pluginExecutions>
+			          </lifecycleMappingMetadata>
+			        </configuration>
+			      </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
